syntax = "proto3";

package resf.apollo.v1;

option go_package = "peridot.resf.org/apollo/pb;apollopb";

enum BuildStatus {
  BUILD_STATUS_UNKNOWN = 0;
  BUILD_STATUS_FIXED = 1;
  BUILD_STATUS_NOT_FIXED = 2;
  BUILD_STATUS_WILL_NOT_FIX = 3;
  BUILD_STATUS_SKIP = 4;
}
